Fix Buttons to NoWrap

--- a/modules/web/src/assets/css/material/_main.scss
+++ b/modules/web/src/assets/css/material/_main.scss
@@ -541,6 +541,7 @@ button {
     height: 45px;
     line-height: 45px;
     min-width: unset;
+    white-space: nowrap;
 
     &:not(:first-child) {
       margin-left: 10px;
